--- a/src/components/styles/WhatIDo.css
+++ b/src/components/styles/WhatIDo.css
@@ -4,7 +4,7 @@
   height: 100vh;
   width: 100%;
   background-color: transparent;
-  z-index: 9;
+  z-index: 2;
 }
 
 .what-container {
@@ -35,7 +35,7 @@
   flex-direction: column;
   justify-content: center;
   position: relative;
-  z-index: 9;
+  z-index: 2;
 }
 
 .what-box h2 {
@@ -78,6 +78,7 @@
   animation: whatBorderReveal 1.2s 1 forwards;
   animation-delay: 0.5s;
   overflow: hidden;
+  will-change: min-height, padding;
 }
 
 @keyframes whatBorderReveal {
